--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <div class="team">
 
-            <h1 class="heading">HOME</h1>
+            <h1 class="heading">Team 1</h1>
             <div class="home-leader">
                 <p class="scores" id="home-scores">0</p>
             </div>
@@ -27,7 +27,7 @@
 
         <div class="team">
 
-            <h1 class="heading">GUEST</h1>
+            <h1 class="heading">Team 2</h1>
 
             <div class="guest-leader">
                 <p class="scores" id="guest-scores">0</p>
